--- a/themes/SuiteP/css/style.css
+++ b/themes/SuiteP/css/style.css
@@ -9581,10 +9581,10 @@ table tr#delegates_search {
 
 @media (max-width: 600px) {
 
-    #search_form .edit.view.search.basic .button,
-    #search_form .edit.view.search.basic input[type=submit],
-    #search_form .edit.view.search.basic input[type=button],
-    #search_form .edit.view.search.basic input[type=reset] {
+    #search_form .edit.view.search.basic .submitButtons .button,
+    #search_form .edit.view.search.basic .submitButtons input[type=submit],
+    #search_form .edit.view.search.basic .submitButtons input[type=button],
+    #search_form .edit.view.search.basic .submitButtons input[type=reset] {
         margin: 0 2px;
         width: 48%;
     }
@@ -9597,10 +9597,14 @@ table tr#delegates_search {
         border: none;
         padding: 0 5px;
         width: 100% !important;
+        line-height: 40px;
+        margin-bottom: 2px;
     }
     #search_form.search_form .edit.view.search.basic input[type=text][name="name_basic"],
     #search_form.search_form .edit.view.search.basic input[type=text][name="search_name_basic"] {
-        width: 84% !important;
+        width: 82% !important;
+        float: right;
+        margin-right: 6px;
     }
 
     #search_form .edit.view.search.basic div.search_fields_basic {
