Fixing height for IE 11+

--- a/themes/SuiteP/css/style.css
+++ b/themes/SuiteP/css/style.css
@@ -5562,6 +5562,7 @@ input[type=text], input[type=password], input:not([type]), textarea {
     border-radius: 4px;
     padding: 5px;
     line-height: 40px;
+    min-height: 48px;
 }
 
 .search_form input[type=text], .search_form textarea {
