--- a/themes/SuiteP/css/style.css
+++ b/themes/SuiteP/css/style.css
@@ -9546,11 +9546,11 @@ table tr#delegates_search {
 /* basic search form on mobile (very small screen) */
 
 @media (max-width: 310px) {
-
+/*
     #search_form .edit.view.search.basic div.search_name_basic input {
         width: 75% !important;
     }
-
+*/
     #search_form .edit.view.search.basic a#advanced_search_link {
         background-position: 90% 2px;
         text-align: left;
@@ -9594,13 +9594,14 @@ table tr#delegates_search {
         line-height: 40px;
         margin-bottom: 2px;
     }
+    /*
     #search_form.search_form .edit.view.search.basic input[type=text][name="name_basic"],
     #search_form.search_form .edit.view.search.basic input[type=text][name="search_name_basic"] {
         width: 82% !important;
         float: right;
         margin-right: 6px;
     }
-
+    */
     #search_form .edit.view.search.basic div.search_fields_basic {
         line-height: 18px;
         margin: 0;
@@ -9657,7 +9658,7 @@ table tr#delegates_search {
     #search_form .edit.view.search.basic {
         position: relative;
     }
-
+/*
     #search_form .edit.view.search.basic div.search_name_basic input {
         width: 54% !important;
         position: absolute;
@@ -9666,7 +9667,7 @@ table tr#delegates_search {
         border: none;
         padding: 0 5px;
     }
-
+*/
     #search_form .edit.view.search.basic .row:nth-of-type(3n) {
         width: 34% !important;
         top: 20px;
@@ -9717,11 +9718,11 @@ table tr#delegates_search {
         width: 42%;
         min-height: 110px;
     }
-
+/*
     #search_form .edit.view.search.basic div.search_name_basic img {
         margin: 5px 8px -6px 8px;
     }
-
+*/
     #search_form .edit.view.search.basic .clear.hidden {
         display: block !important;
         float: none;
@@ -9747,13 +9748,13 @@ table tr#delegates_search {
     #search_form .edit.view.search.basic .col-md-3 {
         width: initial;
     }
-
+/*
     #search_form .edit.view.search.basic div.search_name_basic input {
         width: initial;
         border: none;
         padding: 0 5px;
     }
-
+*/
     #search_form .edit.view.search.basic .row {
         display: block;
         float: none;
