--- a/themes/SuiteP/css/style.css
+++ b/themes/SuiteP/css/style.css
@@ -9738,6 +9738,22 @@ table tr#delegates_search {
         padding: 0 38px 0 8px;
     }
 
+    #search_form .edit.view.search.basic a#advanced_search_link {
+        width: initial;
+    }
+    #search_form .edit.view.search.basic .button,
+    #search_form .edit.view.search.basic input[type=submit],
+    #search_form .edit.view.search.basic input[type=button],
+    #search_form .edit.view.search.basic input[type=reset] {
+        padding-bottom: 0px;
+        padding-left: 20px;
+        padding-right: 20px;
+        padding-top: 0px;
+    }
+    #search_form .edit.view.search.basic .submitButtons {
+        padding-left: 42px;
+    }
+
 }
 
 
