restyle search form on desktop (something like layout design)

--- a/themes/SuiteP/css/style.css
+++ b/themes/SuiteP/css/style.css
@@ -9845,4 +9845,37 @@ table tr#delegates_search {
         padding: 0 38px 0 8px;
     }
 
+
+    #search_form .edit.view.search.basic .col-lg-9 input[type=text],
+    #search_form .edit.view.search.basic .col-lg-9 textarea,
+    #search_form .edit.view.search.basic div.search_fields_basic select[multiple] {
+        border: none;
+        padding: 0 5px;
+    }
+
+
+    #search_form .edit.view.search.basic div.search_fields_basic select[multiple] {
+        padding: 5px 5px;
+        width: 229px !important;
+    }
+
+    #search_form .edit.view.search.basic .date_input {
+        width: 80% !important;
+    }
+    #search_form .edit.view.search.basic img {
+        top: 0px !important;
+    }
+
+    #search_form .edit.view.search.basic label {
+        line-height: 20px;
+    }
+
+    #search_form .edit.view.search.basic .button.firstChild,
+    #search_form .edit.view.search.basic .button.lastChild {
+        padding-left: 0px;
+    }
+    #search_form .edit.view.search.basic div.search_fields_basic {
+        margin: 0 8px 5px 0;
+        min-height: initial;
+    }
 }
