--- a/themes/SuiteP/css/style.css
+++ b/themes/SuiteP/css/style.css
@@ -5371,6 +5371,60 @@ div.search_fields_basic .dateTimeRangeChoice, div.search_fields_basic .dateTimeR
     display: inline-block;
 }
 
+.modal {
+    z-index: 16000;
+}
+
+.qtip-titlebar {
+    padding:  5px 24px 5px 10px;
+}
+
+.qtip-title-text {
+    display: block;
+    float: left;
+    width: 128px;
+    color: #ffffff;
+}
+
+.qtip-title-buttons {
+    display: inline-block;
+    width: 48px;
+    float: right;
+    vertical-align: middle;
+    padding: 0 0 0 4px;
+}
+
+.qtip-title-buttons a {
+    padding-left: 8px;
+    color: #ffffff;
+    margin: 0 4px 0 4px;
+    padding: 0;
+}
+
+.qtip-title-buttons a:hover {
+    color: #B29Eb5;
+}
+
+.qtip-default .qtip-titlebar {
+    background-color: #5D5670;
+}
+
+.qtip-default .qtip-icon {
+    background-color: transparent;
+    border: none;
+    top: 16px;
+}
+
+.qtip-default .qtip-titlebar .qtip-close {
+    color: #ffffff;
+    font-size: 22px;
+}
+
+.qtip-default .qtip-titlebar .qtip-close:hover {
+    color: #B29Eb5;
+    font-size: 22px;
+    font-weight: bold;
+}
 
 /*xs-col-*/
 @media (max-width: 769px) {
