--- a/themes/SuiteP/css/style.css
+++ b/themes/SuiteP/css/style.css
@@ -5252,6 +5252,7 @@ li.topnav ul.dropdown-menu li:last-child a {
 button, html input[type=button], input[type=reset], input[type=submit],
 .button, input[type=button], input[type=reset]{
     margin-right: 4px !important;
+    margin-bottom: 4px !important;
 }
 
 /* Remove Text Transformations for action menu*/
