Fixed #762 - Quick create record from mail (work for all themes)

--- a/themes/SuiteR/css/style.css
+++ b/themes/SuiteR/css/style.css
@@ -5193,5 +5193,8 @@ table tr#delegates_search {
     padding-bottom: 25px;
 }
 
+.yui-dialog {
+    z-index: 20000;
+}
 /* End SuiteCRM Responsive/Bootstrap additional CSS */
 /* End Global CSS */
