--- a/modules/AM_ProjectTemplates/css/style.css
+++ b/modules/AM_ProjectTemplates/css/style.css
@@ -345,15 +345,15 @@
     width:100%;
 }
 /*Add task dialog box*/
-#dialog fieldset{
+#template_dialog fieldset{
     padding:0;
     border:0;
     margin-top:15px;
 }
-#dialog label, #dialog input {
+#template_dialog label, #template_dialog input {
     display:block;
 }
-#dialog  input.text {
+#template_dialog  input.text {
     margin-bottom:12px;
     width:80%;
     padding: .4em;
