--- a/themes/SuiteP/css/style.css
+++ b/themes/SuiteP/css/style.css
@@ -653,7 +653,7 @@ div.noBullet li, .nobullet
 }
 
 
-li.recentlinks {
+li.recentlinks, li.faviritelinks {
     width: 100%;}
 
 
@@ -5422,9 +5422,15 @@ textarea#description {
     transition: all 0.3s ease-out;
 }
 
-.dropdown-menu li:last-of-type a {
+#mobileheader .dropdown-menu li:last-of-type a {
     border-bottom: none;
 }
+
+#mobileheader .dropdown-menu li.recent-links-title a,
+#mobileheader .dropdown-menu li.favorite-links-title a {
+    padding: 12px 15px 5px 15px !important;
+}
+
 .recent_h3 {
     color: #ffffff;
     line-height:42px;
@@ -5466,6 +5472,27 @@ li.topnav {
     line-height: 90px;
     padding: 0 5px 0 5px;
     text-transform: uppercase;
+}
+
+li.topnav > li {
+    line-height: 42px;
+    padding: 0;
+}
+
+li.topnav > ul > li > ul > li a,
+li.topnav  > ul > li > ul > li a {
+    line-height: normal;
+    padding: 15px 12px 15px 12px;
+}
+
+/* fakes the space the icon takes */
+li.topnav > ul > li > ul > li a span.topnav-fake-icon {
+    display: inline;
+    height: 20px;
+}
+
+.with-actions .dropdown-menu {
+    padding: 0;
 }
 
 li.topnav:hover {
@@ -6168,6 +6195,14 @@ form#MassAssign_SecurityGroups {
     padding: 10px 20px 10px 20px;
 }
 
+
+#mobileheader .modulename {
+    background-image: none, url("../../../../index.php?entryPoint=getImage&themeName=SuiteP&themeName=SuiteP&imageName=p_create_arrow.svg"), url("../../../../index.php?entryPoint=getImage&themeName=SuiteP&themeName=SuiteP&imageName=p_create_arrow.png");
+    background-repeat: no-repeat;
+    background-position: 92.5% 5px;
+    padding: 15px 32px 18px 0px;
+}
+
 @media (max-width: 500px) {
 
 }
@@ -6488,7 +6523,7 @@ li.recentlinks_topedit a:focus {
 }
 
 li.recentlinks a {
-    float: left;
+   display: block;
 
 }
 
@@ -6984,6 +7019,10 @@ h3 span {
 
 #mobileheader #modulelinks ul li a {
     font-size: 14px;
+}
+
+#modulelinks {
+    color: #fff;
 }
 
 #quickcreatetop {
@@ -8619,6 +8658,7 @@ div.list-view-rounded-corners > table th:last-of-type {
     #mobile_menu {
         top: 90px;
         left: 10px;
+        -webkit-overflow-scrolling: touch;
     }
 
     #search #query_string {
@@ -8748,10 +8788,8 @@ div.list-view-rounded-corners > table th:last-of-type {
             font-size: 14px;
             letter-spacing: 2px;
             text-transform: uppercase;
-            float: left;
             text-align: left !important;
             margin: 0 auto 0 15px !important;
-            width: 8px;
         }
 
     }
@@ -8833,8 +8871,9 @@ div.list-view-rounded-corners > table th:last-of-type {
     }
 
     div#bs-example-navbar-collapse-1 {
-        float: right;
+        display: block;
         margin-top: -90px;
+        height: 48px;
     }
 }
 
@@ -8847,8 +8886,6 @@ div.list-view-rounded-corners > table th:last-of-type {
     nav.navbar .container-fluid .navbar-header {
         padding-left: 20px;
         padding-right: 20px;
-        float: left;
-        width: 100%;
         height: 60px;
     }
 
@@ -8869,6 +8906,7 @@ div.list-view-rounded-corners > table th:last-of-type {
 
     .modulename {
         height: 60px;
+        width: 100%;
         line-height: 60px !important;
     }
 
