add new style for dashlet config popup only in SuiteP theme

--- a/themes/SuiteP/css/style.css
+++ b/themes/SuiteP/css/style.css
@@ -9594,7 +9594,7 @@ body.yui-skin-sam.masked .yui-panel-container.yui-dialog.yui-simple-dialog.shado
     padding: 20px;
 }
 
-body.yui-skin-sam.masked #dlg.yui-module.yui-overlay.yui-panel {
+body.yui-skin-sam.masked #dlg.SuiteP-configureDashlet.yui-module.yui-overlay.yui-panel {
     top: initial;
     left:initial;
     border: none;
@@ -9603,7 +9603,7 @@ body.yui-skin-sam.masked #dlg.yui-module.yui-overlay.yui-panel {
     margin: 0 auto;
 }
 
-body.yui-skin-sam.masked #dlg.yui-module.yui-overlay.yui-panel .container-close {
+body.yui-skin-sam.masked #dlg.SuiteP-configureDashlet.yui-module.yui-overlay.yui-panel .container-close {
     color: #aaa;
     text-indent: initial;
     top: 15px;
@@ -9611,7 +9611,7 @@ body.yui-skin-sam.masked #dlg.yui-module.yui-overlay.yui-panel .container-close 
     width: initial;
 }
 
-body.yui-skin-sam.masked #dlg.yui-module.yui-overlay.yui-panel .hd {
+body.yui-skin-sam.masked #dlg.SuiteP-configureDashlet.yui-module.yui-overlay.yui-panel .hd {
     background: white;
     color: #534d64;
     font-family: Lato, Lato, Arial, sans-serif;
@@ -9626,7 +9626,7 @@ body.yui-skin-sam.masked #dlg.yui-module.yui-overlay.yui-panel .hd {
     border-bottom: solid 1px #ddd;
 }
 
-body.yui-skin-sam.masked #dlg.yui-module.yui-overlay.yui-panel .bd {
+body.yui-skin-sam.masked #dlg.SuiteP-configureDashlet.yui-module.yui-overlay.yui-panel .bd {
     border-bottom-left-radius: 6px;
     border-bottom-right-radius: 6px;
     /*max-height: initial;*/
@@ -9636,63 +9636,63 @@ body.yui-skin-sam.masked #dlg.yui-module.yui-overlay.yui-panel .bd {
     overflow-y: scroll;
 }
 
-body.yui-skin-sam.masked #dlg.yui-module.yui-overlay.yui-panel .bd form {
+body.yui-skin-sam.masked #dlg.SuiteP-configureDashlet.yui-module.yui-overlay.yui-panel .bd form {
     /*max-height: 80%;*/
     /*overflow-y: scroll;*/
 }
 
-body.yui-skin-sam.masked #dlg.yui-module.yui-overlay.yui-panel .bd form table td input[type="checkbox"] {
+body.yui-skin-sam.masked #dlg.SuiteP-configureDashlet.yui-module.yui-overlay.yui-panel .bd form table td input[type="checkbox"] {
     height: 30px;
     margin-top: 10px;
 }
 
-body.yui-skin-sam.masked #dlg.yui-module.yui-overlay.yui-panel .bd form table.edit tr,
-body.yui-skin-sam.masked #dlg.yui-module.yui-overlay.yui-panel .bd form table.view td tr {
+body.yui-skin-sam.masked #dlg.SuiteP-configureDashlet.yui-module.yui-overlay.yui-panel .bd form table.edit tr,
+body.yui-skin-sam.masked #dlg.SuiteP-configureDashlet.yui-module.yui-overlay.yui-panel .bd form table.view td tr {
     display: block;
     float: none;
     width: auto;
     border-bottom: none;
 }
 
-body.yui-skin-sam.masked #dlg.yui-module.yui-overlay.yui-panel .bd form table.edit tr td[scope=row],
-body.yui-skin-sam.masked #dlg.yui-module.yui-overlay.yui-panel .bd form table.view td tr td {
+body.yui-skin-sam.masked #dlg.SuiteP-configureDashlet.yui-module.yui-overlay.yui-panel .bd form table.edit tr td[scope=row],
+body.yui-skin-sam.masked #dlg.SuiteP-configureDashlet.yui-module.yui-overlay.yui-panel .bd form table.view td tr td {
     display: block;
     float: left;
     width: auto;
 }
 
-body.yui-skin-sam.masked #dlg.yui-module.yui-overlay.yui-panel .bd form table.edit tr td[scope=row] {
+body.yui-skin-sam.masked #dlg.SuiteP-configureDashlet.yui-module.yui-overlay.yui-panel .bd form table.edit tr td[scope=row] {
     width: 30%;
 }
 
-body.yui-skin-sam.masked #dlg.yui-module.yui-overlay.yui-panel .bd form table tr td[scope=row][colspan="4"] {
+body.yui-skin-sam.masked #dlg.SuiteP-configureDashlet.yui-module.yui-overlay.yui-panel .bd form table tr td[scope=row][colspan="4"] {
     float: none;
 }
 
-body.yui-skin-sam.masked #dlg.yui-module.yui-overlay.yui-panel .bd form table tr td[scope=row][colspan="4"] br {
+body.yui-skin-sam.masked #dlg.SuiteP-configureDashlet.yui-module.yui-overlay.yui-panel .bd form table tr td[scope=row][colspan="4"] br {
     display: none;
 }
 
 
-body.yui-skin-sam.masked #dlg.yui-module.yui-overlay.yui-panel .bd form table.edit tr td table {
+body.yui-skin-sam.masked #dlg.SuiteP-configureDashlet.yui-module.yui-overlay.yui-panel .bd form table.edit tr td table {
 
 }
 
-body.yui-skin-sam.masked #dlg.yui-module.yui-overlay.yui-panel .bd form table.edit tr td table tbody {
+body.yui-skin-sam.masked #dlg.SuiteP-configureDashlet.yui-module.yui-overlay.yui-panel .bd form table.edit tr td table tbody {
     display: table-row-group;
     vertical-align: middle;
     border-color: inherit;
     float: initial;
 }
 
-body.yui-skin-sam.masked #dlg.yui-module.yui-overlay.yui-panel .bd form table.edit tr td table tbody tr {
+body.yui-skin-sam.masked #dlg.SuiteP-configureDashlet.yui-module.yui-overlay.yui-panel .bd form table.edit tr td table tbody tr {
     display: table-row;
     vertical-align: inherit;
     border-color: inherit;
     float: initial;
 }
 
-body.yui-skin-sam.masked #dlg.yui-module.yui-overlay.yui-panel .bd form table.edit tr td table tbody tr td {
+body.yui-skin-sam.masked #dlg.SuiteP-configureDashlet.yui-module.yui-overlay.yui-panel .bd form table.edit tr td table tbody tr td {
     display: table-cell;
     vertical-align: inherit;
     float: initial;
@@ -9700,15 +9700,15 @@ body.yui-skin-sam.masked #dlg.yui-module.yui-overlay.yui-panel .bd form table.ed
 
 @media(min-width: 800px) {
 
-    body.yui-skin-sam.masked #dlg.yui-module.yui-overlay.yui-panel .bd form table.edit tr td[scope=row] {
+    body.yui-skin-sam.masked #dlg.SuiteP-configureDashlet.yui-module.yui-overlay.yui-panel .bd form table.edit tr td[scope=row] {
         width: 20%;
     }
-    body.yui-skin-sam.masked #dlg.yui-module.yui-overlay.yui-panel .bd form table.edit tr td[valign=top] {
+    body.yui-skin-sam.masked #dlg.SuiteP-configureDashlet.yui-module.yui-overlay.yui-panel .bd form table.edit tr td[valign=top] {
         float: left;
         width: 25%;
 
     }
-    body.yui-skin-sam.masked #dlg.yui-module.yui-overlay.yui-panel .bd form table.edit tr:last-child {
+    body.yui-skin-sam.masked #dlg.SuiteP-configureDashlet.yui-module.yui-overlay.yui-panel .bd form table.edit tr:last-child {
         clear: both;
     }
 
