--- a/themes/SuiteP/css/style.css
+++ b/themes/SuiteP/css/style.css
@@ -480,7 +480,7 @@ div#pageContainer td.dashletcontainer div.hd .icon {
 }
 
 .moremenu ul, ul.dropdown-menu {
-    max-height: 525px !important;
+    max-height: 525px;
     overflow: auto;
 }
 
@@ -638,8 +638,15 @@ div.noBullet li, .nobullet
 }
 
 
-.with-actions > .dropdown-menu {
-    height: 292px;
+#modulelinks > ul,
+.mobileheader ul,
+#mobile_menu,
+ul.dropdown-menu,
+.with-actions > .dropdown-menu,
+.moremenu ul, ul.dropdown-menu,
+.navbar-fixed-bottom .navbar-collapse,
+.navbar-fixed-top .navbar-collapse {
+    overflow-y: auto;
 }
 
 #recentlyViewedSidebar {
@@ -3682,10 +3689,6 @@ ul.nav-tabs > li:first-of-type > a {
 }
 
 
-#overflow-menu {
-    height: 300px;
-}
-
 #overflow-menu > li > span.notCurrentTabLeft, #overflow-menu > li > span.notCurrentTabRight {
     visibility: collapse;
     display: none;
@@ -5494,7 +5497,7 @@ li.topnav > ul > li > ul > li a span.topnav-fake-icon {
 
 .dropdown-menu li.action-links-title a:hover,
 .dropdown-menu li.recent-links-title a:hover,
-.dropdown-menu li.favotite-links-title a:hover {
+.dropdown-menu li.favorite-links-title a:hover {
     color: #ffffff;
 }
 
@@ -7195,50 +7198,13 @@ h3 span {
         height: 200px !important;
         overflow-y: scroll !important;
     }
-    #modulelinks > ul,
-    .mobileheader ul,
-    #mobile_menu,
-    ul.dropdown-menu{
-        overflow-y: scroll !important;
-        height: 180px;
-        max-height: 200px;
-    }
 
     #wizform #wizard {
         min-width: 300px;
     }
 }
 
-@media (max-width: 640px) and (max-height: 320px) {
-     #quickcreatetop ul.dropdown-menu {
-        height: 180px !important;
-        max-height: 180px !important;
-        overflow-y: scroll !important;
-    }
-
-    li#tab-actions > ul{
-        height: 180px !important;
-        max-height: 180px !important;
-        overflow-y: scroll !important;
-    }
-}
-
-@media (min-width: 480px) and (max-height: 321px) {
-
-    .mobile-bar ul.dropdown-menu.user-dropdown{
-        top: 25px !important;
-        left: -140px !important;
-        height: 200px !important;
-        overflow-y: scroll !important;
-    }
-    #modulelinks > ul,
-    .mobileheader ul,
-    #mobile_menu {
-        overflow-y: scroll !important;
-        height: 180px;
-        max-height: 200px;
-    }
-
+@media (min-width: 480px) and (max-height: 320px) {
     #wizform #wizard {
         width: 400px;
     }
@@ -7253,14 +7219,6 @@ h3 span {
     .mobile-bar ul.dropdown-menu.user-dropdown{
         top: 78px !important;
         left: -140px !important;
-    }
-
-    #modulelinks > ul,
-    .mobileheader ul,
-    #mobile_menu {
-        overflow-y: scroll !important;
-        height: 400px;
-        max-height: 400px;
     }
 
     #wizform #wizard {
@@ -8286,10 +8244,6 @@ div.list-view-rounded-corners > table th:last-of-type {
 
     #desktop_notifications div.dropdown-menu {
         left: -140px;
-    }
-
-    .moremenu ul, ul.dropdown-menu {
-
     }
 
     li.topnav ul.dropdown-menu {
@@ -9464,42 +9418,6 @@ div.list-view-rounded-corners > table th:last-of-type {
         height: auto;
     }
 
-    @media (max-height: 700px) {
-        .moremenu ul, ul.dropdown-menu {
-            max-height: 200px !important;
-            overflow: auto;
-        }
-    }
-
-    @media (min-height: 701px) and (max-height: 800px) {
-        .moremenu ul, ul.dropdown-menu {
-            max-height: 575px !important;
-            overflow: auto;
-        }
-    }
-
-    @media (min-height: 801px) and (max-height: 900px) {
-        .moremenu ul, ul.dropdown-menu {
-            max-height: 700px !important;
-            overflow: auto;
-        }
-    }
-
-    @media (min-height: 901px) and (max-height: 999px) {
-        .moremenu ul, ul.dropdown-menu {
-            max-height: 800px !important;
-            overflow: auto;
-        }
-    }
-
-    @media (min-height: 1001px) {
-        .moremenu ul, ul.dropdown-menu {
-            max-height: 850px !important;
-            overflow: auto;
-        }
-    }
-
-
 
     @media print {
         .navbar-inverse, .sidebar {
@@ -9931,9 +9849,125 @@ table tr#delegates_search {
         display: block;
         float: left;
     }
-
-
-
 }
 
+
+/* dropdown vertical size fixes */
+/* mobile small */
+#modulelinks > ul,
+.mobileheader ul,
+#mobile_menu,
+.navbar-header ul.dropdown-menu,
+.with-actions > .dropdown-menu,
+.moremenu ul,
+ul.dropdown-menu,
+.navbar-fixed-bottom .navbar-collapse,
+.navbar-fixed-top .navbar-collapse {
+    max-height: 200px;
+    height: 200px;
+}
+
+/*mobile medium*/
+@media (min-height: 380px) {
+    .navbar-header ul.dropdown-menu,
+    .topnav .dropdown-menu,
+    .with-actions > .dropdown-menu,
+    .moremenu ul,
+    ul.dropdown-menu {
+        max-height: 200px;
+        height: auto;
+    }
+
+    #modulelinks > ul,
+    .mobileheader ul,
+    #mobile_menu,
+    .navbar-fixed-bottom .navbar-collapse,
+    .navbar-fixed-top .navbar-collapse{
+        max-height: 280px;
+        height: 280px;
+    }
+}
+
+/* mobile large*/
+@media  (min-height: 480px) {
+    .navbar-header ul.dropdown-menu,
+    .topnav .dropdown-menu,
+    .with-actions > .dropdown-menu,
+    .moremenu ul,
+    ul.dropdown-menu {
+        max-height: 380px;
+        height: auto;
+    }
+
+    #modulelinks > ul,
+    .mobileheader ul,
+    #mobile_menu {
+        max-height: 380px;
+        height: auto;
+    }
+
+    .navbar-fixed-bottom .navbar-collapse,
+    .navbar-fixed-top .navbar-collapse{
+        max-height: 380px;
+        height: 380px;
+    }
+}
+
+/* 720p / ipad */
+@media  (min-height: 700px) {
+    .navbar-header ul.dropdown-menu,
+    .topnav .dropdown-menu,
+    .with-actions > .dropdown-menu,
+    .moremenu ul,
+    ul.dropdown-menu {
+        max-height: 620px;
+        height: auto;
+    }
+
+    #modulelinks > ul,
+    .mobileheader ul,
+    #mobile_menu {
+        max-height: 620px;
+    }
+    .navbar-fixed-bottom .navbar-collapse,
+    .navbar-fixed-top .navbar-collapse{
+        max-height: 620px;
+        height: 620px;
+    }
+}
+
+/* 720p-1080p*/
+@media  (min-height: 820px) {
+    .navbar-header ul.dropdown-menu,
+    .topnav .dropdown-menu,
+    .with-actions > .dropdown-menu,
+    .moremenu ul,
+    ul.dropdown-menu {
+        max-height: 700px;
+        height: auto;
+    }
+}
+
+/* 1080p*/
+@media  (min-height: 920px) {
+    .navbar-header ul.dropdown-menu,
+    .topnav .dropdown-menu,
+    .with-actions > .dropdown-menu,
+    .moremenu ul,
+    ul.dropdown-menu {
+        max-height: 820px;
+        height: auto;
+    }
+}
+
+/* 2K and above */
+@media  (min-height: 1080px) {
+    .navbar-header ul.dropdown-menu,
+    .topnav .dropdown-menu,
+    .with-actions > .dropdown-menu,
+    .moremenu ul, ul.dropdown-menu {
+        max-height: auto;
+        height: auto;
+    }
+}
 
